--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <main class="container">
 
             <div class="slider">
-              <img class="active" src="./source/image/1.jpg" />
-              <img src="./source/image/2.jpg" />
-              <img src="./source/image/3.jpg" />
+              <img class="img active" src="./source/image/1.jpg" />
+              <img class="img" src="./source/image/2.jpg" />
+              <img class="img" src="./source/image/3.jpg" />
             </div>
         
             <div class="cont-btn">
